--- a/app/views/tmpl/addinterface.html
+++ b/app/views/tmpl/addinterface.html
@@ -73,9 +73,9 @@ border: 3px solid #22beef !important;
 		
 		 
         <div class="tile-body">
-		<div class="form-group"> <label for="inputPassword3" class="col-sm-2 control-label"><b> Interface Name</b></label> <div class="col-sm-4"> <input class="form-control"  id="Interface" placeholder="Interface Name" ng-model="interface_name" > </div> </div>
-		<br>
-		<br>
+		<div class="form-group">
+<div class="form-group "> <label for="inputPassword3" class="col-sm-4 control-label"><b> Interface Name</b></label>  <br><br><span class="col-sm-6"><input class="form-control col-sm-6"  id="Interface" placeholder="Interface Name" ng-model="interface_name" ></span> </div>
+		
           <div >
 
 
@@ -89,7 +89,7 @@ border: 3px solid #22beef !important;
    <table class="table" id="svnTable">
                                         <thead>
                                         <tr>
-                                            <th width="300px;">Flow Name</th>
+                                            <th width="300px;"><br>Flow Name</th>
                                             <th>SVN Path for Flow</th>
                                             <th></th>
                                
