--- a/app/views/tmpl/interfacelist.html
+++ b/app/views/tmpl/interfacelist.html
@@ -41,7 +41,7 @@
                                     <tr>
                                       <th> Interface  Name </th>
                                       <th> Created Date </th>
-                                     
+                                     <th> Last Update </th>
                                      
                                       <th> <center>Environment </center></th>
                                       <th> By </th>
@@ -80,8 +80,8 @@
                                     </tr> -->
 									<tr ng-repeat="x in interfaces | orderBy: '-time'">
 									  <td  ng-click="viewflow(x.interface_name)"><font color="#616f77"><span class="tab"><a style="cursor:default">{{x.interface_name}}</a></span></font></td>
-                                      <td>{{x.date}} {{x.time}} </td>
-                                     
+                                      <td>{{x.date}} - {{x.time}} </td>
+                                     <td>{{x.date}} - {{x.time}} </td>
                                     
                                       <td><center>DEV</center></td>
                                       <td>Arjun Kanniah</td>
