--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -10,17 +10,18 @@ text-decoration:none !important;
 
       <ul id="navigation" nav-collapse ripple>
         <li ui-sref-active="active"><a ui-sref="app.dashboard"><fa name="dashboard"></fa> <span>{{ 'Menu.DASHBOARD' | translate }}</span></a></li>
-        <li ui-sref-active="active"><a ui-sref="app.projects"><fa name="briefcase"></fa> Interfaces</a>
-		  <ul>
-            <li ui-sref-active="active"><a ui-sref="app.addinterface"><fa name="caret-right"></fa>Create New</a></li>
+        <!--<li ui-sref-active="active"><a ui-sref="app.projects"><fa name="briefcase"></fa> Interfaces</a>-->
+		<li ui-sref-active="active"><a ui-sref="app.interfacelist"><fa name="briefcase"></fa> Interfaces</a>
+	<!--	  <ul>-->
+            <!--<li ui-sref-active="active"><a ui-sref="app.addinterface"><fa name="caret-right"></fa>Create New</a></li>-->
 			<!--<li ui-sref-active="active"><a ui-sref="app.editinterface"><fa name="caret-right"></fa>Edit Interface</a></li>-->
-			 <li ui-sref-active="active"><a ui-sref="app.interfacelist"><fa name="caret-right"></fa>Interface Listing</a></li>
+			 <!--<li ui-sref-active="active"><a ui-sref="app.interfacelist"><fa name="caret-right"></fa>Interface Listing</a></li>-->
            <!-- <li ui-sref-active="active"><a ui-sref="app.viewinterface"><fa name="caret-right"></fa>View Interface</a></li>-->
            <!--  <li ui-sref-active="active"><a ui-sref="app.viewflow"><fa name="caret-right"></fa>View Flow</a></li> -->
             <!--<li ui-sref-active="active"><a ui-sref="app.viewjob"><fa name="caret-right"></fa>View Job</a></li>			-->
 			<!-- <li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Add Library property</a></li>
 			<li ui-sref-active="active"><a ui-sref="app.configurationsPage"><fa name="caret-right"></fa>configurationsPage</a></li> -->
-          </ul>
+          <!--</ul>-->
 		</li>
 	
 		<li ui-sref-active="active"><a ui-sref=""><fa name="book"></fa> Library</a>
