Page changes for button loader
Button loader

--- a/app/views/tmpl/addinterface.html
+++ b/app/views/tmpl/addinterface.html
@@ -142,7 +142,8 @@ border: 3px solid #22beef !important;
 			 <button type="button" ng-click="myFunction1()" id="showAccordian"  return false;" class="btn btn-blue mb-10 col-sm-10 "><i class="fa fa-plus"></i> &nbsp<b> Add Flow</b></button>
 			</div>
 			<div class="col-sm-2">
-			 <button type="button" ng-click="saveInterface()" class="btn btn-cyan mb-10 col-sm-10"><b>Save Interface</b></button>
+			<!-- <button type="button" ng-click="saveInterface()" class="btn btn-cyan mb-10 col-sm-10"><b>Save Interface</b></button>-->
+			<button ng-click="saveInterface()"  class="btn btn-cyan btn-ef btn-ef-7 btn-ef-7h mb-10 col-sm-12" activate-button="loading"><i id="btns" style="display:none;" class="fa fa-refresh fa-spin"></i><span id="load" style="position:relative;left:-15px;"><b>Save Interface</b></span></button>
 			</div>
 			
 			
