--- a/app/views/tmpl/viewflow.html
+++ b/app/views/tmpl/viewflow.html
@@ -674,7 +674,7 @@ border-radius:15px;
 
     </div>
     <div class="col-sm-4">
-      <button type="button" class="btn btn-primary col-sm-12 btn-danger">Promote</button>
+      <button type="button" class="btn btn-primary col-sm-12 btn-danger" id="promote">Promote</button>
     </div>
   </div>
 </div>
@@ -686,7 +686,8 @@ border-radius:15px;
     </select> --> 
 	 
 	
-    <button type="button" class="btn btn-darkgray mb-10 col-sm-12" ng-click="builddetails()">Build and Deploy</button>
+    <!--<button type="button" class="btn btn-darkgray mb-10 col-sm-12" ng-click="builddetails()">Build and Deploy</button>-->
+	<button ng-click="builddetails()"  class="btn btn-darkgray mb-10 col-sm-12" activate-button="loading" id="deploy"><i id="btns" style="display:none;position:relative;left:-5px;" class="fa fa-refresh fa-spin"></i><span id="load">Build and Deploy</span></button>
   </div>
     <div id="id01" class="w3-modal" ng-show="buildmodal">
 	
@@ -747,7 +748,7 @@ border-radius:15px;
   
  
   <div class="col-sm-6">
-    <button type="button" class="btn btn-darkgray mb-10 col-sm-12" ng-click="rollbackdetails()">Rollback and Decomission</button>
+    <button ng-click="rollbackdetails()"  class="btn btn-darkgray mb-10 col-sm-12" activate-button="loading" id="roll"><i id="btns1" style="display:none;" style="position:relative;left:-5px;" class="fa fa-refresh fa-spin"></i><span id="load1">Rollback and Decomission</span></button>
   </div>
 	<div id="id02" class="w3-modal" ng-show="buildmodal1">
 	
