--- a/app/views/tmpl/viewinterface.html
+++ b/app/views/tmpl/viewinterface.html
@@ -335,7 +335,7 @@ background-color: #0d416b !important;
 					<br><select ng-model="ConfigServiceName" ng-options="x for x in flowNames_Test"></select>
                 </div>
 				 <div id="SenderPort_Num " >
-                    <label for="SenderPort_Num  ">Sender Port_Number  </label>
+                    <label for="SenderPort_Num  ">Sender Port Number  </label>
                     <input class="form-group col-sm-12" id="SenderPort_Num" type="text" ng-model="SenderPort_Num"></input>
                 </div>
 				<div id="IIBNode" >
@@ -349,7 +349,7 @@ background-color: #0d416b !important;
 	</div>
 	<div class="col-sm-6">
 	<div id="SenderHost_IP " >
-                    <label for="SenderHost_IP  ">Sender Host_IP  </label>
+                    <label for="SenderHost_IP  ">Sender Host IP  </label>
                     <input class="form-group col-sm-12" id="SenderHost_IP  " type="text" ng-model="SenderHost_IP"></input>
                 </div>
 				<!--  <div id="username " >
