--- a/app/views/nav.html
+++ b/app/views/nav.html
@@ -29,14 +29,16 @@ text-decoration:none !important;
 			<li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Library properties</a></li>
 			</ul>-->
 			<ul>
-
-           <li ui-sref-active="active"><a ui-sref="app.addlibrary"><fa name="caret-right"></fa>Create New</a></li>
+			<li ui-sref-active="active"><a ui-sref="app.libraryList"><fa name="caret-right"></fa>Library Listing</a>
+			<li ui-sref-active="active"><a ui-sref="app.viewlibrary"><fa name="caret-right"></fa>View Library</a>
+          <!-- <li ui-sref-active="active"><a ui-sref="app.addlibrary"><fa name="caret-right"></fa>Create New</a></li>
             
 
              <li ui-sref-active="active"><a ui-sref="app.viewlibrary"><fa name="caret-right"></fa>View Library</a></li>
 
            <li ui-sref-active="active"><a ui-sref="app.viewlibraryjob"><fa name="caret-right"></fa>View Job</a></li>
-		   <li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Library properties</a></li>
+		   -->
+		  <!-- <li ui-sref-active="active"><a ui-sref="app.addLibraryProperties"><fa name="caret-right"></fa>Library properties</a></li>-->
                 
 
          </ul>
