--- a/app/views/tmpl/viewlibrary.html
+++ b/app/views/tmpl/viewlibrary.html
@@ -1,304 +1,105 @@
-
-                <div class="page page-tables-bootstrap">
-
-                    <div class="pageheader">
-
-                        <h2>View Library <span></span></h2>
-
-                        <div class="page-bar">
-
-                            <ul class="page-breadcrumb">
-                                <li>
-                                    <a href="index.html"><i class="fa fa-home"></i> mDash</a>
-                                </li>
-                                <li>
-                                    <a href="#">Library</a>
-                                </li>
-                                <li>
-                                    <a href="">Library Name</a>
-                                </li>
-                            </ul>
-                            <div class="page-toolbar ng-scope"> <a ui-sref="app.addinterface" href="javascript:;" class="btn btn-lightred no-border ng-isolate-scope" > <i class="fa fa-edit"></i>&nbsp;&nbsp;<span class="ng-binding">Edit</span> </a> </div>
-                        </div>
-
-                    </div>
-
-                    <!-- row -->
-                    <div class="row">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.1/socket.io.js" integrity="sha256-fiM0lX3OYzf0FfLBeLqFuCokh+rf1VhI/eanPbzldUM=" crossorigin="anonymous"></script>	
 
 
-                      <!-- col -->
-                      <div class="col-md-6">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+html, body {
+font-family: "Lato",sans-serif !important;
 
-                        <!-- tile -->
-                        <section class="tile" fullscreen="isFullscreen02" ng-controller="BrowseUsageCtrl">
-                          <div class="tile-header dvd dvd-btm">
-                          <h1 class="custom-font"><strong>Flows</strong></h1>
+}
+.w3-btn, .w3-button {
+padding: 10px 16px;
+}
 
-                          </div>
-                          <!-- tile body -->
-                          <div class="tile-body p-0" style="overflow-y:scroll;height:225px;">
+.w3-teal, .w3-hover-teal:hover {
+color: #fff !important;
+background-color: #0d416b !important;
+margin-left:-17px;
 
+}
+.w3-button:hover {
+background-color: #0d416b !important;
+}
+</style>
+<div class="page page-tables-bootstrap">
+	<div class="pageheader">
+		<h2>Library View <span></span></h2>
+		<div class="page-bar">
+			<ul class="page-breadcrumb">
+				<li>
+					<a href="index.html"><i class="fa fa-home"></i> mDash</a>
+				</li>
+				<li>
+					<a ng-model="interfaceName" id="interfaceName" href="">Library Name</a>
+				</li>
+			</ul>
+			<!-- ui-sref="app.editinterface" -->
+			<div class="page-toolbar ng-scope"> <a ng-click="editLibrary()" class="btn btn-lightred no-border ng-isolate-scope" ng-click="edit()" > <i class="fa fa-edit"></i>&nbsp;&nbsp;<span class="ng-binding">Edit</span> </a> </div>
+		</div>
+	</div>
 
+	<div class="row">
+	  <div class="col-md-12">
+			<section class="tile" fullscreen="isFullscreen02">
+				<div class="row">
+					<div class="col-md-12">
+						<section class="tile" fullscreen="isFullscreen02" ng-controller="BrowseUsageCtrl">
+							<div class="tile-body p-0">
+								<div class="tile-header dvd dvd-btm">
+									<h1 class="custom-font">Library Details</h1>
+								</div>
+							</div>
+						</section>
+					</div>
+				</div>
+				<table class="table table-no-border m-0" style="overflow-y:scroll">
+	<tbody>
+		<tr>
+		  <th>Library Name</th>
+		  <th>Created Date</th>
+		  <th>Last Updated</th>
+		  <th>Deploy Status</th>
+		  <th>Environment</th>
+		  <th>By</th>
+		</tr>
+	</tbody>
+</table>
+			</section>
+			<!-- Pop-up for add Library - START -->
+					<div id="id01" class="w3-modal" ng-show="buildmodal">
+    
+					<div class="w3-modal-content">
+					  <div class="w3-container" >
+					  
+					  <header class="w3-container w3-teal">
+					   <span onclick="document.getElementById('id01').style.display='none'"
 
-                                <table class="table table-no-border m-0" >
-                                  <tbody>
-                                    <tr>
-                                      <th> Flow Name </th>
-                                      <th> Date </th>
-                                      <th> Time </th>
-                                      <th> <center>Result</center> </th>
-                                      <th> <center>Environment </center></th>
+					   class="w3-button w3-display-topright" >&times;</span>
 
-                                    </tr>
-                                    <tr  >
-                                      <td ><a  ui-sref="app.projectbuild"><font color="#616f77"><span class="tab">CLA_CLIENTMISC_ORM</span></font></a></td>
-                                      <td> 3 April 2017  </td>
-                                      <td> 08:04 PM </td>
-                                      <td><center><i class="fa fa-square text-success"></i></center></td>
-                                      <td><center>DEV</center></td>
+					   <h4><b>Update Library</b></h4>
+					 </header>
 
-                                    </tr>
-                                    <tr >
-                                      <td >NLA_FEDMNET_ORM</td>
-                                      <td> 4 April 2017 </td>
-                                      <td> 07:44 PM </td>
-                                      <td><center><i class="fa fa-square text-success"></i></center></td>
-                                      <td><center>TEST</center></td>
-
-                                    </tr>
-                                    <tr>
-                                      <td>SETX_DWH_ADT</td>
-                                      <td> 7 April 2017 </td>
-                                      <td> 06:14 PM</td>
-                                      <td><center><i class="fa fa-square text-danger"></i><center></td>
-                                      <td><center>PROD</center></td>
-
-                                    </tr>
-                                    <tr>
-                                      <td>SETX_DWH_ADT</td>
-                                      <td> 7 April 2017 </td>
-                                      <td> 06:14 PM</td>
-                                      <td><center><i class="fa fa-square text-danger"></i><center></td>
-                                      <td><center>PROD</center></td>
-
-                                    </tr><tr>
-                                      <td>SETX_DWH_ADT</td>
-                                      <td> 7 April 2017 </td>
-                                      <td> 06:14 PM</td>
-                                      <td><center><i class="fa fa-square text-danger"></i><center></td>
-                                      <td><center>PROD</center></td>
-
-                                    </tr>
-                                    <tr>
-                                      <td>SETX_DWH_ADT</td>
-                                      <td> 7 April 2017 </td>
-                                      <td> 06:14 PM</td>
-                                      <td><center><i class="fa fa-square text-danger"></i><center></td>
-                                      <td><center>PROD</center></td>
-
-                                    </tr><tr>
-                                      <td>SETX_DWH_ADT</td>
-                                      <td> 7 April 2017 </td>
-                                      <td> 06:14 PM</td>
-                                      <td><center><i class="fa fa-square text-danger"></i><center></td>
-                                      <td><center>PROD</center></td>
-
-                                    </tr>
-                                    <tr>
-                                      <td>SETX_DWH_ADT</td>
-                                      <td> 7 April 2017 </td>
-                                      <td> 06:14 PM</td>
-                                      <td><center><i class="fa fa-square text-danger"></i><center></td>
-                                      <td><center>PROD</center></td>
-
-                                    </tr>
-
-
-                                  </tbody>
-                                </table>
-
-
-                          </div>
-                          <!-- /tile body -->
-
-                        </section>
-                        <!-- /tile -->
-
-                      </div>
-                      <!-- /col -->
-                      <!-- col -->
-                      <div class="col-md-6">
-
-                        <!-- tile -->
-                        <section class="tile bg-slategray" fullscreen="isFullscreen01">
-
-
-
-                          <!-- tile body -->
-                          <div class="tile-body" ng-controller="ActualStatisticsCtrl">
-
-                            <!-- row -->
-                            <div class="row">
-
-
-                              <!-- col -->
-                              <div class="col-md-12 col-sm-12">
-
-                                <h4 class=" custom-font mb-20"><strong></strong> </h4>
-
-                                <!-- row -->
-                                <div class="row bg-slategray">
-                                  <!-- col -->
-								  <div class="col-lg-4 text-center">
-                                    <div easypiechart options="easypiechart2.options" percent="easypiechart2.percent" class="easypiechart" style="width: 140px; height: 140px;">
-                                      <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-white">3/4</strong></p><br>
-                                      <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Dev</strong> </p>
-                                      <p class="text-light">v4.1 - April 18th,2017</p>
-                                    </div>
-                                  </div>
-                                  <div class="col-lg-4 text-center">
-                                    <div easypiechart options="easypiechart.options" percent="easypiechart.percent" class="easypiechart" style="width: 140px; height: 140px;">
-                                      <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-white">4/4</strong></p>
-                                      <br>
-                                    <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Test</strong> </p>
-                                    <p class="text-light">v3.2 - April 11th,2017</p>
-                                  </div>
-                                </div>
-                                  <!-- /col-->
-                                  <!-- col -->
-                                  
-                                  <!-- /col -->
-                                  <!-- col -->
-                                  <div class="col-lg-4  text-center">
-                                    <div easypiechart options="easypiechart3.options" percent="easypiechart3.percent" class="easypiechart" style="width: 140px; height: 140px;">
-                                      <p class="text-uppercase text-elg mt-20 mb-0" style="line-height: 100px;"><strong class="text-white">2/4</strong></p><br>
-                                      <p class="text-uppercase text-elg mt-20 mb-0"><strong class="text-white">Prod</strong> </p>
-                                      <p class="text-light">v4.4 - April 27th, 2017 </p>
-                                    </div>
-                                  </div>
-                                  <!-- /col -->
-                                </div>
-                                <!-- /row -->
-
-                              </div>
-                              <!-- /col -->
-
-                    </div>
-                    <!-- /row -->
+						<span ng-click="close()" class="w3-button w3-display-topright" style="color:#ffffff !important;">&times;</span>
+						<br>
+							<div class="form-group row">
+					<div class="col-sm-6">
+					<div id="ConfigServiceName">
+						<label for="ConfigServiceName  "><b>Library Name</b></label><br>
+						<input class="form-group col-sm-12" id="ConfigServiceName" type="text" ng-model="ConfigServiceName"></input>
+					</div>
+					<div id="SenderPort_Num " style="position:relative;top:-6px;">
+					 <br>
+						<label for="SenderPort_Num"><b>Library URL</b></label>
+						<input class="form-group col-sm-12" id="SenderPort_Num" type="text" ng-model="SenderPort_Num"></input>
+					</div>
+					
+							<div class="form-group row col-sm-12">
+							<button type="button" class="btn btn-darkgray mb-10 col-sm-6"  ng-click="change()" style="background-color:#0d416b";><b>Update Library</b></button>
+							</div>
+					  </div>
+					</div>
+				  </div>
+<!-- Pop-up for add Library - END -->
+		</div>
+	</div>
 </div>
-</div>
-</div>
-
-
-
-
-                    <!-- row -->
-                    <div class="row">
-                      <!-- col -->
-                      <div class="col-md-12">
-
-                        <!-- tile -->
-                        <section class="tile" fullscreen="isFullscreen02" ng-controller="BrowseUsageCtrl">
-                          <!-- tile body -->
-                          <div class="tile-body p-0">
-
-                           <div class="tile-header dvd dvd-btm">
-                            <h1 class="custom-font"><strong>Recent</strong> Builds</h1>
-
-                        </div>
-
-                                <table class="table table-no-border m-0" style="overflow-y:scroll">
-                                  <tbody>
-                                    <tr>
-                                      <th> Build Name </th>
-                                      <th> Date </th>
-                                      <th> Time </th>
-                                      <th> <center>Result</center> </th>
-                                      <th> <center>Environment </center></th>
-                                      <th> By </th>
-                                    </tr>
-                                    <tr  >
-                                      <td ><a  ui-sref="app.projectbuild"><font color="#616f77"><span class="tab">CLA_CLIENTMISC_ORM</span></font></a></td>
-                                      <td> 3 April 2017  </td>
-                                      <td> 08:04 PM </td>
-                                      <td><center><i class="fa fa-square text-success"></i></center></td>
-                                      <td><center>DEV</center></td>
-                                      <td> Chanakya Lokam</td>
-                                    </tr>
-                                    <tr >
-                                      <td >NLA_FEDMNET_ORM</td>
-                                      <td> 4 April 2017 </td>
-                                      <td> 07:44 PM </td>
-                                      <td><center><i class="fa fa-square text-success"></i></center></td>
-                                      <td><center>TEST</center></td>
-                                      <td>Chanakya Lokam</td>
-                                    </tr>
-
-                                  </tbody>
-                                </table>
-
-
-                          </div>
-                          <!-- /tile body -->
-
-                        </section>
-                        <!-- /tile -->
-
-                      </div>
-                      <!-- /col -->
-
-                    </div>
-                    <!-- /row -->
-                    <!-- row -->
-                    <div class="row">
-                      <!-- col -->
-                      <div class="col-md-12">
-
-                        <!-- tile -->
-                        <section class="tile" fullscreen="isFullscreen02" ng-controller="BrowseUsageCtrl">
-                          <!-- tile body -->
-                          <div class="tile-body p-0">
-
-                            <div class="tile-header dvd dvd-btm">
-                            <h1 class="custom-font"><strong>Invoke</strong> Test</h1>
-
-                        </div>
-                             <div class="tile-body ng-scope">
-
-                                    <form role="form" class="ng-pristine ng-valid">
-                                        <div class="form-group">
-                                            <label for="exampleInputEmail1">Email address</label>
-                                            <input class="form-control" id="exampleInputEmail1" placeholder="Enter email" type="email">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="exampleInputPassword1">Password</label>
-                                            <input class="form-control" id="exampleInputPassword1" placeholder="Password" type="password">
-                                        </div>
-                                        <label class="checkbox checkbox-custom">
-                                            <input checked="" disabled="" type="checkbox"><i></i>
-                                            Check me out
-                                        </label>
-                                        <button type="submit" class="btn btn-rounded btn-success btn-sm">Submit</button>
-                                    </form>
-
-                                </div>  
-
-
-                          </div>
-                          <!-- /tile body -->
-
-                        </section>
-                        <!-- /tile -->
-
-                      </div>
-                      <!-- /col -->
-
-                    </div>
-                    <!-- /row -->
-
-
-
-
-
-                </div>
