--- a/app/views/tmpl/viewinterface.html
+++ b/app/views/tmpl/viewinterface.html
@@ -25,7 +25,7 @@ background-color: #0d416b !important;
 
                     <div class="pageheader">
 
-                        <h2>View Interface <span></span></h2>
+                        <h2>{{interfaceName}} <span></span></h2>
 
                         <div class="page-bar">
 
@@ -38,7 +38,7 @@ background-color: #0d416b !important;
                                 </li>
                             </ul>
 							<!-- ui-sref="app.editinterface" -->
-                            <div class="page-toolbar ng-scope"> <a href="javascript:;" class="btn btn-lightred no-border ng-isolate-scope" ng-click="edit()" > <i class="fa fa-edit"></i>&nbsp;&nbsp;<span class="ng-binding">Edit</span> </a> </div>
+                            <div class="page-toolbar ng-scope"> <a href="javascript:;" class="btn btn-lightred no-border ng-isolate-scope" ng-click="edit(interfaceName)" > <i class="fa fa-edit"></i>&nbsp;&nbsp;<span class="ng-binding">Edit</span> </a> </div>
                         </div>
 
                     </div>
