--- a/app/views/tmpl/addinterface.html
+++ b/app/views/tmpl/addinterface.html
@@ -74,7 +74,8 @@ border: 3px solid #22beef !important;
 		 
         <div class="tile-body">
 		<div class="form-group">
-<div class="form-group "> <label for="inputPassword3" class="col-sm-4 control-label"><b> Interface Name</b></label>  <br><br><span class="col-sm-6"><input class="form-control col-sm-6"  id="Interface" placeholder="Interface Name" ng-model="interface_name" ></span> </div>
+<div class="form-group "> <label for="inputPassword3" class="col-sm-4 control-label"><b> Interface Name</b></label>  <br><br><span class="col-sm-6"><input class="form-control col-sm-6"  id="Interface" placeholder="Interface Name" ng-model="interface_name" ></span> </div><br><br>
+<div class="form-group "><label for="inputPassword3" class="col-sm-5 control-label"><b>SVN Password</b></label><br><br><span class="col-sm-6"><input  type="password" class="form-control col-sm-6"  id="svnpassword" placeholder="SVN Password" ng-model="svnpassword" ></span> </div>
 		
           <div >
 
